# django_rest_amis_huangping

./: .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
myRenderApp/: auto_urls.py
myRenderApp/static/amis_json/: chart.json  chart2.json  chart3.json  curd_bak.json  test.json
mysite/: settings.py  urls.py
rest_admin_app/: apps.py  auto_urls_rest.py  cleaning.py  jobs.py  models.py  scheduler.py  urls.py  views.py  views_echarts.py
rest_admin_app/management/commands/: init_clean_methods_and_devices.py  runapscheduler.py
rest_admin_app/migrations/: 0002_alter_fisrtmodel_created_alter_fisrtmodel_linenos.py  0006_alter_fisrtmodel_created_alter_fisrtmodel_linenos.py
rest_admin_app/migrations copy/: 0001_initial.py  0003_alter_fisrtmodel_created.py  0004_alter_fisrtmodel_linenos.py  0005_cleanmethod_device_cleaneddata_rawdata.py  0007_remove_rawdata_device_and_more.py
rest_admin_app/templates/: water_quality_monitoring copy 2.html  water_quality_monitoring copy.html  water_quality_monitoring.html
